@@ -68,12 +68,12 @@ public class MapToServerInfo implements Function<Map<String, String>, ServerInfo
       if (from.containsKey("status"))
          builder.status(ServerStatus.fromValue(from.get("status")));
       if (from.containsKey("smp") && !"auto".equals(from.get("smp")))
-         builder.smp(new Integer(from.get("smp")));
+         builder.smp(Integer.valueOf(from.get("smp")));
       builder.cpu(Integer.parseInt(from.get("cpu")));
       builder.mem(Integer.parseInt(from.get("mem")));
       builder.user(from.get("user"));
       if (from.containsKey("started"))
-         builder.started(new Date(new Long(from.get("started"))));
+         builder.started(new Date(Long.valueOf(from.get("started"))));
       builder.uuid(from.get("server"));
       builder.vnc(new VNC(from.get("vnc:ip"), from.get("vnc:password"), from.containsKey("vnc:tls")
             && Boolean.valueOf(from.get("vnc:tls"))));
